# RospOS

./: .gitignore  Design.md  Ideas.md  Makefile  VM_OPTIMIZATION_ANALYSIS.md  base_writer.py  build.sh  font8x8_basic_data.h  generate_fb_map_data.py  resources.md  results.txt  rosbdump  rosp.hexpat  rospbdump.txt  rospos.blockdev  topfns  vm.py
.github/: binary_v2.prompt.md  copilot-instructions.md
doc/: Design.md  Ideas.md  Log.md  instr_encode.md  requirements.md
rosasm/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
rosasm/syntaxes/: ros.tmLanguage.json
rospoas/: REFACTOR.md  ast.json  ast.txt  code_generator.py  common_functions.ros  compilation_pipeline.py  compile.py  compile_debug.py  debug_parse.txt  debug_writer.py  encode.py  encoding.py  errors.py  grammar_parser.py  ir.py  layout.py  lower.py  maps.py  mmap.txt  optimizer.py  preprocessor.py  register_alloc_reader.py  rospoas.lark  test.py  test.ros  test.s  test_ast.json  transformer.py  transpile.py  utility.py
rospocc/: .coverage  abi.py  debug_emitter.py  emitter.py  emitter_calls.py  emitter_expr.py  emitter_intrinsics.py  emitter_registers.py  emitter_stmt.py  example_lang.rosc  first_test.rosc  frontend.py  parser.py  preprocess.py  register_allocator.py  ros_from_CAST.prompt.md  rosc.lark  tracked_writer.py  transformer.py  transformer_context.py  transformer_expr.py  transformer_stmt.py  transformer_tu.py  transformer_utils.py
rospocc/lib/: stdio.rosc  stdlib.rosc
rospocctranscompiler/: Makefile  riscv_transcompiler.c  riscv_transcompiler.ros  riscv_transcompiler.s  transpiler.py
rospocctranscompiler/lib/: bool.h  stdlib.h
rospocctranspiler/: Makefile  riscv.lark  riscv_transcompiler.ros  riscv_transcompiler.rosp  riscv_transcompiler_ast.json  riscv_transcompiler_debug_parse.txt  riscv_transcompiler_mapping.txt  riscv_transcompiler_preprocessed.ros  transpiler.py
rospocctranspiler/lib/: stdio.h
rospos/: .gitignore  bc.rosc  binary_register.ros  common_functions.ros  digits.ros  display.ros  display.rosc  font_bitmap.ros  main.ros  main.rosc  rand_draw_test.rosc  screen_test.ros  screen_test.rosc  test.ros  tty.ros  tty.rosc
rospos/binaries/: bc.ros  screen_test.ros
rospos/lib/: block_device.rosc  display.rosc  display_image.rosc  file.rosc  fixed_point.rosc  stdio.rosc  stdlib.rosc  terminal.rosc  time.rosc
rosposcc/: compile.sh  test.c  test.ll
rospovm/: .gitignore  Binary.cpp  Binary.h  CMakeLists.txt  CodeView.cpp  CodeView.h  DebugControlPanel.cpp  DebugControlPanel.h  DebugParser.cpp  DebugParser.h  DisassemblyView.cpp  DisassemblyView.h  Display.cpp  Display.h  InstructionDecoder.cpp  InstructionDecoder.h  LogView.cpp  LogView.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Makefile  Memory.cpp  Memory.h  MemoryMapParser.cpp  MemoryMapParser.h  MemoryView.cpp  MemoryView.h  Register.cpp  Register.h  RegisterView.cpp  RegisterView.h  RospOSVM.cpp  RospOSVM.h  TTY.cpp  TTY.h  TTYWidget.cpp  TTYWidget.h  VMController.cpp  (+9 more)
rospovm/backend/: Binary.cpp  BlockDevice.cpp  BlockDevice.h  BlockDeviceBacking.cpp  BlockDeviceBacking.h  DebugParser.h  Display.cpp  Display.h  InstructionDecoder.cpp  Memory.cpp  Memory.h  Register.h  RospOSVM.cpp  RospOSVM.h  TTY.cpp
rospovm/backend/interpreter/: RospOSVM.cpp  RospOSVM.h
rospovm/backend/jit/: JitCompiler.cpp  JitCompiler.h
rospovm/backend/shared/: Binary.h  ExecutionBackend.h  Memory.cpp  Memory.h  Shutdown.cpp  Shutdown.h  TTY.h
rospovm/frontend/headless/: main_headless.cpp
rospovm/frontend/html/: index.html  main_html.cpp
rospovm/frontend/qt/: CodeView.cpp  CodeView.h  DebugControlPanel.cpp  DebugControlPanel.h  MainWindow.cpp  MainWindow.h  MemoryView.cpp  MemoryView.h  VMController.cpp  VMController.h
rospovm/frontend/qt/full/: CodeView.cpp  DebugControlPanel.cpp  MainWindow.cpp  MainWindow.h  VMController.cpp  VMController.h  main_qt.cpp
rospovm/frontend/qt/minimal/: main_minimal_qt.cpp
rospovm/frontend/qt/shared/: VMControllerCore.cpp  VMControllerCore.h
rospovm/highlighting/syntax/: rospos-assembly.xml
rospovm/highlighting/themes/: rospos-night.theme
tests/: test_pipeline.py
tools/: generate_fb_map_data.py  image_to_rosb.py  report.py  rosb_tool.py  show_palette.py
tools/benchmarking/: bench_rospoas.py  bench_rospocc.py  bench_vm.py  common.py  plot_benchmarks.py  run_all.py
tools/benchmarking/programs/: static_test.rosc
tools/benchmarking/results/: benchmark_all_20260329_094744.json  benchmark_all_20260329_100046.json  benchmark_all_20260329_100517.json  benchmark_all_20260329_101709.json  benchmark_all_20260329_122240.json  benchmark_all_20260329_124007.json  benchmark_all_20260329_124941.json  benchmark_all_20260329_125904.json  benchmark_all_20260329_130039.json  benchmark_all_20260329_130304.json  benchmark_all_20260403_092928.json  benchmark_all_20260403_095053.json  benchmark_all_20260403_100234.json  benchmark_all_20260403_100814.json  benchmark_all_20260403_100920.json  benchmark_all_20260407_170621.json  benchmark_all_20260407_171704.json
